@@ -1,6 +1,7 @@
 Version - 3.0.1 - 
--Post CRAN release version - adding Pete Wagner's functions relating to measuring character exhaustation.
+-Post CRAN release version - adding Pete Wagner's functions relating to measuring character exhaustation, added Pete to the authors for paleotree.
 -Added another cladogram (an MPT from a 13-taxon analysis) to SongZhangDicrano example dataset
+-Added argument verboseWarnings to cal3 functions, modified previous 'warnings' (actually used function for messages) to warnings
 -
 
 Version - 3.0.0 - 10-20-17
